<resources>
    <string name="app_name">PhotoGraph</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start_dragging_crop">Drag to resize</string>
    <string name="release_to_take_photo"></string>
    <string name="taking_picture">Taking picture</string>
    <string name="processing_image">Processing Image</string>
    <string name="TAG2">TAG2</string>
    <string name="addsub">Addition</string>
    <string name="onlysub">Subtraction</string>
    <string name="Home">Home</string>
    <string name="ScalerMult">Scalar Multiplication</string>
    <string name="transpose">Transpose</string>
    <string name="multiply">Multiplication</string>
    <string name="inverse">Inverse</string>
    <string name="adjoint">Adjoint</string>
    <string name="Eigenvalues">EigenValues</string>
    <string name="trace_text">Trace</string>
    <string name="determinant">Determinant</string>
    <string name="exponent">Exponential</string>
    <string name="ExitButton">Exit</string>
    <string name="AddMessage">Click to Add a Matrix Variable</string>
    <string name="NewMatrix">Create New Variable</string>
    <string name="Nameit">Name of the Matrix Variable</string>
    <string name="Row">Row</string>
    <string name="Col">Column</string>
    <string name="MatrixType">Type : </string>
    <string name="Warning1">Name field cannot be left blank</string>
    <string name="Filling">Fill the Matrix</string>
    <string name="NotSquare">Provided Matrix must be a Square Matrix</string>
    <string name="Confirm">Create</string>
    <string name="Warning2">Some Matrix Element(s) are Empty</string>
    <string name="ConfirmMake">Confirm</string>
    <string name="CancelCustomFill">Cancel</string>
    <string name="NoValue">No Value Provided</string>
    <string name="Clear">Clear All</string>
    <string name="Warning3">WARNING : Lower Limit Exceeds Upper Limit, Application may Crash</string>
    <string name="Warning4">Are You Sure, Above Values will be Lost ?</string>
    <string name="thanks_for_using">Thanks for Using Me</string>
    <string name="TransposePrompt">Transpose Type</string>
    <string name="Yup">Yes</string>
    <string name="clear">CLEAR</string>
    <string name="Warning8">Nothing to Clear</string>
    <string name="Warning9">Clear All Matrix Variables ?</string>
    <string name="WarningExit">Sure to Exit the Application ?</string>
    <string name="edit">Edit Elements</string>
    <string name="Delete">DELETE</string>
    <string name="Delete2">Delete</string>
    <string name="OrderChange">Change Order</string>
    <string name="ConfirmTheValueChange">SAVE</string>
    <string name="SetOriginalValue">Revert Changes</string>
    <string name="RevertSuccess">Restored the Original Values</string>
    <string name="Deleted">Deleted</string>
    <string name="ConfirmSuccess">Values Updated</string>
    <string name="SetNewOrder">Set New Order</string>
    <string name="Warning10">Newly Created Elements will get Default Value of 0</string>
    <string name="ChangedOrder">Order Changed</string>
    <string name="ShortAddSub">Addition</string>
    <string name="ShortOnlySub">Subtraction</string>
    <string name="Scaler">Scalar Multiplication</string>
    <string name="ShortCustom">Custom</string>
    <string name="MainSubtitle">All Variables</string>
    <string name="NothingCreated">Press the Button below to Create a Variable</string>
    <string name="OpenHint">Click the Button below to Add a Variable</string>
    <string name="Created">Variable Created</string>
    <string name="OpenHint2">Please add a Variable to Proceed</string>
    <string name="NoSupport">None of the Variable Support this Operation</string>
    <string name="Calculating">Calculating..</string>
    <string name="Warning11">Determinant Calculated but not Shown</string>
    <string name="Result">Result</string>
    <string name="save">SAVE</string>
    <string name="EnterExpo">Enter Exponent</string>
    <string name="Expohint">Enter the Exponent here</string>
    <string name="CopyToClip">Copied to Clipboard</string>
    <string name="copy">Copy</string>
    <string name="Done">Done</string>
    <string name="CannotSave">Cannot Save Results Elements higher than 999999 </string>
    <string name="SavedAs">Saved as</string>
    <string name="ExpoOverflow">Smaller Value Please</string>
    <string name="NoInverse">No Inverse Exist</string>
    <string name="MultiplierPlease">Enter the Multiplier</string>
    <string name="AddTip">Tap on a List Item to add it in the Addition Queue</string>
    <string name="AddQueue">Addition Queue</string>
    <string name="Proceed">Proceed</string>
    <string name="Notdefined">Operation not defined</string>
    <string name="RemoveLast">Remove From Queue</string>
    <string name="NothingTORemove">Nothing to Remove</string>
    <string name="SubTip">Tap on a List Item to add it in the Subtraction Queue</string>
    <string name="SubQueue">Subtraction Queue</string>
    <string name="MulTip">Tap on a List Item to add it in the Multiplication Queue</string>
    <string name="MulQueue">Multiplication Queue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>

</resources>
